# ImageModerationAPI

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: moderate.py
app/core/: config.py  container.py
app/services/: deepai.py
nginx/servers/: site.conf
